Fix button text color changing in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ header, footer, section
 
     .brand {
         box-sizing: border-box;
-        border: 1px solid var(--input-border-color);
+        border: 1px solid var(--button-border-color);
         height: 100px;
         width: 196px;
         padding: 2rem;
