--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,5 +1,6 @@
 :root {
-    --input-border-color: #B4B7C9;
+    --button-text-color: white;
+    --button-border-color: #B4B7C9;
     
     --primary-color: #6366F1;
     --secondary-color: #EFF2FC;
@@ -11,7 +12,7 @@
 }
 
 [data-theme="dark"] {
-    --input-border-color: #85878C;
+    --button-border-color: #85878C;
 
     --secondary-color: #171B25;
     --black-color: #EFF2FC;
@@ -26,7 +27,7 @@
     justify-content: center;
     align-items: center;
 
-    color: var(--secondary-color);
+    color: var(--button-text-color);
     border: 1px solid var(--secondary-color);
     
     gap: 8px;
@@ -119,7 +120,7 @@ input {
 
     margin: 3px;
     
-    border: 2px solid var(--input-border-color);
+    border: 2px solid var(--button-border-color);
     background-repeat: no-repeat;
     background-position: center center;
 
@@ -158,7 +159,7 @@ input {
         transition: 0.1s background-position-x;
 
         &:not(:checked) {
-            background-color: var(--input-border-color);
+            background-color: var(--button-border-color);
             background-position-x: left;
         }
 
